# ALEX_SORIANO_MICRO_2026_C2

./: LICENSE  README.md
Tarea 2/: ESP32-S3_DESIGN.kicad_prl  ESP32-S3_DESIGN.kicad_pro  ESP32-S3_DESIGN.kicad_sch
Tarea 2/ESP32-S3_DESIGN/: ESP32-S3_DESIGN.kicad_pro  ESP32-S3_DESIGN.kicad_sch  ~ESP32-S3_DESIGN.kicad_sch.lck
Tarea 3/: CMakeLists.txt  sdkconfig  sdkconfig.old
Tarea 3 - FSM/: CMakeLists.txt  README.md  sdkconfig.defaults
Tarea 3 - FSM/main/: CMakeLists.txt  app_config.h  app_main.c  fsm_led.c  fsm_led.h  pin_config.h  wifi_mqtt.c  wifi_mqtt.h
Tarea 3/main/: CMakeLists.txt  Kconfig.projbuild  fsm_switch.c  idf_component.yml
Tarea 4 y 5/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
Tarea 4 y 5/main/: CMakeLists.txt  app_config.h  app_main.c  buttons.c  buttons.h  control_task.c  control_task.h  display.c  display.h  i2c_bus.c  i2c_bus.h  joystick.c  joystick.h  mpu6050.c  mpu6050.h  pin_config.h  rf_link.c  rf_link.h  wifi_mqtt.c  wifi_mqtt.h
