idf_component_register(
    SRCS
        "app_main.c"
        "i2c_bus.c"
        "joystick.c"
        "buttons.c"
        "mpu6050.c"
        "rf_link.c"
        "display.c"
        "wifi_mqtt.c"
        "control_task.c"
    INCLUDE_DIRS "."
    REQUIRES
        driver
        esp_adc
        esp_wifi
        esp_event
        nvs_flash
        mqtt
        esp_timer
        esp_driver_rmt
)
